src/test/ui/parser/issue-14303-impl.stderr
error: incorrect parameter order
  --> $DIR/issue-14303-impl.rs:5:5
   |
LL | impl<'a, T, 'b> X<T> {}
   |     ^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b, T>`

error: aborting due to previous error

